--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
 body {
 	color: #555;
+	font-family: 'Ubuntu', arial, serif;
 }
 
 h1 {
 	text-align: center;
+	text-shadow: 2px 2px 2px #aaa;
 }
 
 .center {
@@ -18,6 +20,12 @@ table.grid {
 
 table.grid td {
 	border: 1px solid #CCC;
-	height: 150px;
-	width: 200px;
+	height: 100px;
+	width: 150px;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.block {
+	background-color: #D3E3D5;
 }
