--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Ubuntu'), url('Ubuntu-Regular.woff') format('woff');
+}
+
 body {
 	color: #555;
 	font-family: 'Ubuntu', arial, serif;
