--- a/web/css/main.css
+++ b/web/css/main.css
@@ -17,7 +17,7 @@ body {
 }
 
 header {
-  height: 3em;
+  height: 2em;
 }
 
 .dark {
@@ -39,13 +39,27 @@ a:hover, a:active {
 	color: red;
 }
 
-.draggable { position: absolute; width: 150px; height: 150px; margin: 10px 10px; padding: 5px 5px; }
+.draggable {
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  margin: 10px;
+  padding: 5px;
+}
+
+.red {
+  background: #D8F3C9;
+}
+
+.blue {
+  background: #ACD1E9;
+}
 
 footer {
   text-align: center;
   position: absolute;
   bottom: 0px;
-  height: 4em;
+  height: 3em;
   font-size: 0.75em;
   width: 100%;
   padding: 0.5em 0;
