--- a/web/css/main.css
+++ b/web/css/main.css
@@ -47,14 +47,6 @@ a:hover, a:active {
   padding: 5px;
 }
 
-.red {
-  background: #D8F3C9;
-}
-
-.blue {
-  background: #ACD1E9;
-}
-
 footer {
   text-align: center;
   position: absolute;
@@ -69,3 +61,10 @@ footer {
   border-width: 0;
   float: right;
 }
+
+/* example colors, should be replaced with better more flexible options */
+.red { background: #FFCCCB; }
+.blue { background: #ACD1E9; }
+.green { background: #D8F3C9; }
+.orange { background: #FFCC00; }
+
